vendored_parsers/tree-sitter-latex/grammar.js
  word: $ => $.command_name,
  rules: {
    source_file: $ => repeat($._root_content),

    //--- Trivia

    _root_content: $ => choice($._section, $._paragraph, $._flat_content),

    _text_with_env_content: $ =>
      choice(
        ',',
        '=',
        $.comment_environment,
        $.verbatim_environment,
        $.listing_environment,
        $.minted_environment,
        $.asy_environment,
        $.asydef_environment,
        $.pycode_environment,
        $.luacode_environment,
        $.sagesilent_environment,
        $.sageblock_environment,
        $.generic_environment,
        $.math_environment,
        $._text_content,
      ),

    _text_content: $ =>
      prec.right(
        1,
        choice(
          $.curly_group,
          $.block_comment,
          $._command,
          $.text,
          $._math_content,
          '(',
          ')',
        ),
      ),

    //--- Sections

    curly_group: $ => seq('{', repeat($._root_content), '}'),

    curly_group_text: $ => seq('{', field('text', $.text), '}'),

    curly_group_spec: $ =>
      seq('{', repeat(choice($._text_content, '=')), '}'),

    curly_group_label: $ => seq('{', field('label', $.label), '}'),

    curly_group_label_list: $ =>
      seq('{', sepBy(field('label', $.label), ','), '}'),

    curly_group_uri: $ => seq('{', field('uri', $.uri), '}'),

    curly_group_command_name: $ =>
      seq('{', field('command', $.command_name), '}'),

    curly_group_author_list: $ =>
      seq(
        '{',
        sepBy(
          alias(repeat1($._text_content), $.author),
          alias('\\and', $.command_name),
        ),
        '}',
      ),

    brack_group: $ =>
      seq('[', repeat(choice($._text_with_env_content, $.brack_group)), ']'),

    brack_group_argc: $ => seq('[', field('value', $.argc), ']'),

    brack_group_key_value: $ =>
      seq('[', sepBy(field('pair', $.key_value_pair), ','), ']'),

    //--- Text

    text: $ =>
      prec.right(
        repeat1(
          field(
            'word',
            choice(
              $.operator,
              $.word,
              $.placeholder,
              $.delimiter,
              $.block_comment,
              $._command,
              $.superscript,
              $.subscript,
            ),
          ),
        ),
      ),

    word: $ => /[^\s\\%\{\},\$\[\]\(\)=\#&_\^\-\+\/\*]+/,

    placeholder: $ => /#+\d/,

    uri: $ => /[^\[\]\{\}]+/,

    label: $ => /[^\\\[\]\{\}\$\(\)=&%\s_\^\#\~,]+/,

    argc: $ => /\d/,

    operator: $ => choice('+', '-', '*', '/', '<', '>', '!', '|', ':', "'"),

    key_value_pair: $ =>
      seq(field('key', $.text), optional(seq('=', field('value', $.value)))),

    value: $ => repeat1(choice($._text_content, $.brack_group)),

    //--- Math

    text_mode: $ =>
      seq(
        field('command', choice('\\text', '\\intertext', '\\shortintertext')),
        field('content', $.curly_group),
      ),

    //--- Environments

    begin: $ =>
      prec.right(
        seq(
          field('command', '\\begin'),
          field('name', $.curly_group_text),
          field('options', optional($.brack_group)),
        ),
      ),

    end: $ =>
      prec.right(
        seq(field('command', '\\end'), field('name', $.curly_group_text)),
      ),

    generic_environment: $ =>
      seq(
        field('begin', $.begin),
        repeat($._root_content),
        field('end', $.end),
      ),

    //--- Trivia environments

    ...specialEnvironment({
      rule: 'comment_environment',
      name: 'comment',
    _command: $ =>
      choice(
        $.title_declaration,
        $.author_declaration,
        $.package_include,
        $.class_include,
        $.latex_include,
        $.biblatex_include,
        $.bibstyle_include,
        $.bibtex_include,
        $.graphics_include,
        $.svg_include,
        $.inkscape_include,
        $.verbatim_include,
        $.import_include,
        $.caption,
        $.citation,
        $.label_definition,
        $.label_reference,
        $.label_reference_range,
        $.label_number,
        $.new_command_definition,
        $.old_command_definition,
        $.let_command_definition,
        $.paired_delimiter_definition,
        $.environment_definition,
        $.glossary_entry_definition,
        $.glossary_entry_reference,
        $.acronym_definition,
        $.acronym_reference,
        $.theorem_definition,
        $.color_definition,
        $.color_set_definition,
        $.color_reference,
        $.tikz_library_import,
        $.hyperlink,
        $.changes_replaced,
        $.todo,
        $.generic_command,
      ),

    generic_command: $ =>
      prec.right(
        seq(
          field('command', $.command_name),
          repeat(field('arg', $.curly_group)),
        ),
      ),

    command_name: $ => /\\([^\r\n]|[@a-zA-Z]+\*?)?/,

    author_declaration: $ =>
      seq(
        field('command', '\\author'),
        field('options', optional($.brack_group)),
        field('authors', $.curly_group_author_list),
      ),

    label_definition: $ =>
      seq(field('command', '\\label'), field('name', $.curly_group_label)),

    label_reference: $ =>
      seq(
        field(
          'command',
          choice(
            '\\ref',
            '\\eqref',
            '\\vref',
            '\\Vref',
            '\\autoref',
            '\\autoref*',
            '\\pageref',
            '\\pageref*',
            '\\autopageref',
            '\\autopageref*',
            '\\cref',
            '\\cref*',
            '\\Cref',
            '\\Cref*',
            '\\cpageref',
            '\\Cpageref',
            '\\namecref',
            '\\nameCref',
            '\\lcnamecref',
            '\\namecrefs',
            '\\nameCrefs',
            '\\lcnamecrefs',
            '\\labelcref',
            '\\labelcref*',
            '\\labelcpageref',
            '\\labelcpageref*',
          ),
        ),
        field('names', $.curly_group_label_list),
      ),

    new_command_definition: $ =>
      choice($._new_command_definition, $._newer_command_definition, $._new_command_copy),

    _new_command_definition: $ =>
      seq(
        field(
          'command',
          choice(
            '\\newcommand',
            '\\newcommand*',
            '\\renewcommand',
            '\\renewcommand*',
            '\\providecommand',
            '\\providecommand*',
            '\\DeclareRobustCommand',
            '\\DeclareRobustCommand*',
            '\\DeclareMathOperator',
            '\\DeclareMathOperator*',
          ),
        ),
        field('declaration', choice($.curly_group_command_name, $.command_name)),
        optional(
          seq(
            field('argc', $.brack_group_argc),
            field('default', optional($.brack_group)),
          ),
        ),
        field('implementation', $.curly_group),
      ),

    _newer_command_definition: $ =>
      seq(
        field(
          'command',
          choice(
            '\\NewDocumentCommand',
            '\\RenewDocumentCommand',
            '\\ProvideDocumentCommand',
            '\\DeclareDocumentCommand',
            '\\NewExpandableDocumentCommand',
            '\\RenewExpandableDocumentCommand',
            '\\ProvideExpandableDocumentCommand',
            '\\DeclareExpandableDocumentCommand',
          ),
        ),
        field('declaration', choice($.curly_group_command_name, $.command_name)),
        field('spec', $.curly_group_spec),
        field('implementation', $.curly_group),
      ),

    _new_command_copy: $ =>
      seq(
        field(
          'command',
          choice(
            '\\NewCommandCopy',
            '\\RenewCommandCopy',
            '\\DeclareCommandCopy',
          ),
        ),
        field('declaration', choice($.curly_group_command_name, $.command_name)),
        field('implementation', $.curly_group_command_name),
      ),

    acronym_definition: $ =>
      seq(
        field('command', '\\newacronym'),
        field('options', optional($.brack_group_key_value)),
        field('name', $.curly_group_text),
        field('short', $.curly_group),
        field('long', $.curly_group),
      ),

    hyperlink: $ =>
      prec.right(
        seq(
          field('command', choice('\\url', '\\href')),
          field('uri', $.curly_group_uri),
          field('label', optional($.curly_group)),
        ),
      ),
